[package]
name = "mazze-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
mazze-types = { path = "../../crates/mazze_types" }
mazzecore = { path = "../../crates/mazzecore/core" }
blockgen = { path = "../../crates/blockgen" }
randomx-rs = "1.3.0"
tokio = { version = "1.6", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
hex = "0.4"
clap = { version = "3.2", features = ["derive"] }
toml = "0.5"
core_affinity = "0.8.1"
rand = "0.8"
libc = "0.2.162"
hwlocality = "1.0.0-alpha.6"
parking_lot = "0.12" 
thread_local = "1.1.4"

[dev-dependencies]
hex-literal = "0.4"
