[package]
name = "mazze"
build = "build.rs"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
mio = "0.6.8"
clap = { version = "2", features = ["yaml"] }
textwrap = "0.9"
toml = "0.5.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
parking_lot = "0.11"
panic_hook = { git = "https://github.com/MazzeLabs/mazze-parity-deps", rev = "223e9acc6f7ba9f1b296639f08b326a72d7b92fa"  }
app_dirs = "1.2.1"
dir = { git = "https://github.com/MazzeLabs/mazze-parity-deps", rev = "223e9acc6f7ba9f1b296639f08b326a72d7b92fa"  }
mazzestore = { path = "../../crates/mazze_store" }
mazzecore-accounts = { path = "../../crates/accounts" }
home = "0.5.0"
rpassword = "4.0.1"
io = { path = "../../crates/util/io" }
runtime = { path = "../../crates/util/runtime" }
ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git", rev="b523017108bb2d571a7a69bd97bc406e63bc7a9d" }
jsonrpc-core = "15.1.0"
jsonrpc-tcp-server = "15.1.0"
jsonrpc-http-server = "15.1.0"
jsonrpc-core-client = { version = "15.1.0", features = ["http"] }
error-chain = { version = "0.12.4" }
log = "0.4"
slab = "0.4"
mazzecore = { path = "../../crates/mazzecore/core" }
network = { path = "../../crates/network" }
db = { path = "../../crates/dbs/db" }
blockgen = { path = "../../crates/blockgen" }
txgen = { path = "../../crates/transactiongen" }
secret-store = { path = "../../crates/secret_store" }
primitives = { path = "../../crates/primitives" }
log4rs = { version = "1.2.0", features = ["background_rotation", "gzip"] }
rlp = "0.4.0"
keccak-hash = "0.5"
rand = "0.8.3"
kvdb-rocksdb = {path= "../../crates/dbs/kvdb-rocksdb" }
client = { path = "../../crates/client" }
mazze-types = { path = "../../crates/mazze_types" }
threadpool = "1.7"
futures = "0.1.29"
docopt = "1.0"
mazzekey = { path = "../../crates/mazze_key" }
parity-wordlist = "1.3.0"
rustc-hex = "2.1"
env_logger = "0.5"
malloc_size_of = {path= "../../crates/util/malloc_size_of" }
diem-crypto = { path= "../../crates/mazzecore/core/src/pos/crypto/crypto" }
diem-types = { path= "../../crates/mazzecore/core/src/pos/types" }
pos-ledger-db = { path = "../../crates/mazzecore/core/src/pos/storage/pos-ledger-db" }
executor-types = { path = "../../crates/mazzecore/core/src/pos/types/executor-types" }
executor = { path = "../../crates/mazzecore/core/src/pos/consensus/executor" }
storage-interface = { path = "../../crates/mazzecore/core/src/pos/storage/storage-interface" }
move-core-types = { path = "../../crates/mazzecore/core/src/pos/types/move-core-types" }
bcs = "0.1.3"
tempdir = "0.3.7"
hex = "0.3.0"
base64ct = "=1.1.1"
parity-version = {path = "../../crates/util/version" }

[target.'cfg(not(target_env = "msvc"))'.dependencies.jemallocator]
version = "0.3.2"
optional = true

[[bin]]
name = "consensus_bench"
path = "../../crates/mazzecore/core/benchmark/consensus/src/main.rs"

[[bin]]
name = "mazze-gen-dot"
path = "../mazze-gen-dot/main.rs"

[features]
default = ["jemalloc-global", "bls-blst"]
deadlock-detection = ["parking_lot/deadlock_detection"]
jemalloc-global = ["jemallocator", "malloc_size_of/jemalloc-global"]
bls-blst = ["mazzecore/bls-blst", "diem-crypto/bls-blst"]
bls-pairing = ["mazzecore/bls-pairing", "diem-crypto/bls-pairing"]
blst-portable = ["mazzecore/blst-portable", "diem-crypto/blst-portable"]
u64-mpt-db-key = ["client/u64_mpt_db_key"]

[lints.rust]
unexpected_cfgs = { level = "allow" }