[package]
description = "Parity Ethereum Keys Generator CLI"
name = "ctxkey-cli"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
docopt = "1.0"
env_logger = "0.5"
mazzekey = { path = "../../crates/mazze_key" }
panic_hook = { git = "https://github.com/MazzeLabs/mazze-parity-deps", rev = "223e9acc6f7ba9f1b296639f08b326a72d7b92fa"  }
parity-wordlist="1.2"
rustc-hex = "2.1"
serde = "1.0"
serde_derive = "1.0"
threadpool = "1.7"

[[bin]]
name = "mazzekey"
path = "src/main.rs"
doc = false