[package]
description = "Parity Ethereum Key Management CLI"
name = "mazzestore-cli"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
docopt = "1.0"
env_logger = "0.5"
num_cpus = "1.6"
rustc-hex = "2.1"
serde = "1.0"
serde_derive = "1.0"
parking_lot = "0.11"
mazzestore = { path = "../../crates/mazze_store" }
panic_hook = { git = "https://github.com/MazzeLabs/mazze-parity-deps", rev = "223e9acc6f7ba9f1b296639f08b326a72d7b92fa"  }
dir = { git = "https://github.com/MazzeLabs/mazze-parity-deps", rev = "223e9acc6f7ba9f1b296639f08b326a72d7b92fa"  }

[[bin]]
name = "mazzestore"
path = "src/main.rs"
doc = false

[dev-dependencies]
tempdir = "0.3"
