[package]
description = "Mazze Account Management"
homepage = "http://mazze.io"
license = "GPL-3.0"
name = "mazzecore-accounts"
version = "0.1.0"
authors = ["Mazze Foundation"]
edition = "2018"

[dependencies]
mazzekey = { path = "../mazze_key" }
mazzestore = { path = "../mazze_store" }
mazze-types = { path = "../mazze_types" }
log = "0.4"
parking_lot = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
tempdir = "0.3"
