[package]
description = "Mazze blockgen library"
homepage = "https://www.mazze.io"
license = "GPL-3.0"
name = "blockgen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2"
mazzecore = { path = "../mazzecore/core" }
mazzekey = { path = "../mazze_key" }
mazze-parameters = { path = "../mazzecore/parameters" }
mazze-stratum = { path = "../stratum" }
mazze-types = { path = "../mazze_types" }
db = { path = "../dbs/db" }
lazy_static = "1.4"
log = "0.4"
metrics = { path = "../util/metrics" }
network = { path = "../network" }
primitives = { path = "../primitives" }
parking_lot = "0.11"
rlp = "0.4.0"
rand = "0.7"
secret-store = { path = "../secret_store" }
toml = "0.5.8"
txgen = { path = "../transactiongen" }
