[package]
description = "Mazze Keys Generator"
name = "mazzekey"
version = "0.3.0"
authors = ["Mazze Foundation"]
edition = "2021"

[dependencies]
mazze-types = { path = "../mazze_types" }
edit-distance = "2.0"
parity-crypto = "0.9.0"
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
lazy_static = "1.4"
log = "0.4"
parity-wordlist = "1.3"
quick-error = "1.2.2"
rand = "0.7"
rustc-hex = "2.1"
serde = "1.0"
serde_derive = "1.0"
tiny-keccak = "1.4"
zeroize = "1.0.0"
malloc_size_of_derive = {path = "../util/malloc_size_of_derive" }
malloc_size_of = {path = "../util/malloc_size_of" }
docopt = "1.0"
env_logger = "0.5"
panic_hook = { git = "https://github.com/MazzeLabs/mazze-parity-deps", rev = "223e9acc6f7ba9f1b296639f08b326a72d7b92fa"  }
threadpool = "1.7"

