[package]
description = "Parity Ethereum Key Management"
name = "mazzestore"
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.4"
libc = "0.2"
rand = "0.7"
mazze-types = { path = "../mazze_types" }
mazzekey = { path = "../mazze_key" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "2.1"
tiny-keccak = "1.4"
time = "0.1.34"
parking_lot = "0.11"
parity-crypto = { version = "0.9.0", features = ["publickey"] }
dir = { git = "https://github.com/MazzeLabs/mazze-parity-deps", rev = "223e9acc6f7ba9f1b296639f08b326a72d7b92fa"  }
smallvec = "1.4"
parity-wordlist = "1.0"
tempdir = "0.3"

[dev-dependencies]
matches = "0.1"
