[package]
name = "primitives"
version = "0.2.0"
edition = "2021"

[dependencies]
byteorder = "1.2.7"
mazze-types = { path = "../mazze_types" }
mazze-bytes = { path = "../mazze_bytes" }
mazzekey = { path = "../mazze_key" }
fixed-hash = "0.5"
keccak-hash = "0.5"
lazy_static = "1.4"
log = "0.4"
malloc_size_of = { path = "../util/malloc_size_of" }
rand = "0.7"
rlp = "0.4.0"
rlp_derive = { git = "https://github.com/MazzeLabs/mazze-parity-deps", rev = "223e9acc6f7ba9f1b296639f08b326a72d7b92fa"  }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
siphasher = "0.3"
unexpected = { git = "https://github.com/MazzeLabs/mazze-parity-deps", rev = "223e9acc6f7ba9f1b296639f08b326a72d7b92fa"  }
once_cell = "1.17.1"

[dev-dependencies]
criterion = "0.3"
serde_json = "1.0"
itertools = "0.10"

[[bench]]
name = "benchmark"
harness = false

# Unfortunately cfg test attributes doesn't work across crates,
# we have to define a feature for test code.
# https://users.rust-lang.org/t/cfg-test-doesnt-propagate-to-external-crates/13046
[features]
test_no_account_length_check = []