[package]
name = "geth-tracer"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = "0.7.1"
revm = { version = "8.0", default-features = false, features = ["std"] }
alloy-rpc-types-trace = { workspace = true }
mazze-vm-types = { path = "../vm-types" }
mazze-types = { path = "../../mazze_types" }
mazze-executor = { path = "../executor" }
typemap = { package = "typemap-ors", version = "1.0"}
mazze-vm-interpreter = { path = "../vm-interpreter" }
primitives = { path = "../../primitives" }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]