[package]
description = "Mazze internal common library"
homepage = "https://www.mazze.io"
license = "GPL-3.0"
name = "mazze-internal-common"
version = "1.0.0"
edition = "2021"

[dependencies]
mazze-bytes = { path = "../../mazze_bytes" }
mazze-types = { path = "../../mazze_types" }
mazze-parameters = { path = "../parameters" }
derivative = "2.0.2"
lazy_static = "1.4"
log = "0.4"
malloc_size_of = { path = "../../util/malloc_size_of" }
malloc_size_of_derive = { path = "../../util/malloc_size_of_derive" }
parking_lot = "0.11"
primitives = { path = "../../primitives" }
rlp = "0.4.0"
rlp_derive = { git = "https://github.com/MazzeLabs/mazze-parity-deps", rev = "223e9acc6f7ba9f1b296639f08b326a72d7b92fa"  }
serde = "1.0"
serde_derive = "1.0"
toml = "0.5.8"
