[package]
description = "Mazze consensus benchmark"
homepage = "https://www.mazze.io"
license = "GPL-3.0"
name = "consensus_bench"
version = "0.1.0"
edition = "2018"

[dependencies]
mazzecore = { path = "../.." }
mazze-types = { path = "../../../../mazze_types" }
primitives = { path = "../../../../primitives" }
db = { path = "../../../../dbs/db" }
threadpool = "1.0"
parking_lot = "0.11"
log4rs = { version = "1.2.0", features = ["background_rotation", "gzip"] }
log = "0.4"

[dev-dependencies]

[workspace]
# Note: try to list it in the top level workspace and to exclude it from mazzecore.

[profile.release]
debug = false
